After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644836 - gdk_keyval_to_unicode returns incorrect value for keyval = GDK_Return
gdk_keyval_to_unicode returns incorrect value for keyval = GDK_Return
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-03-15 16:02 UTC by varunjain
Modified: 2011-03-16 20:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description varunjain 2011-03-15 16:02:51 UTC
gdk_keyval_to_unicode(GDK_Return) returns 0. It should return 13 instead.
Comment 1 varunjain 2011-03-15 16:04:47 UTC
varunjain@varunjain-desktop:~/temp/cpp$ cat GdkTest.cc 
#include <stdio.h>
#include <gdk/gdk.h>
#include <gdk/gdkkeysyms.h>

int main() {
  printf("%u\n", gdk_keyval_to_unicode(GDK_Return));
}
varunjain@varunjain-desktop:~/temp/cpp$ g++ -o GdkTest GdkTest.cc `pkg-config --libs --cflags gtk+-2.0`
varunjain@varunjain-desktop:~/temp/cpp$ ./GdkTest 
0
varunjain@varunjain-desktop:~/temp/cpp$